tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/key/dotted-redefine-table.stderr
TOML parse error at line 4, column 1
  |
4 | a.b.c = 2
  | ^
dotted key `a.b` attempted to extend non-table type (integer)
